--- a/style.css
+++ b/style.css
@@ -1,5 +1,155 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 *{
   margin:0;
   padding:0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  width: 100vw;
+  height: 100vh;
+  background: #1E1E1E;
+}
+main{
+  position: relative;
+  width: 1127px;
+  height: 4662px;
+  background: #FFFFFF;
+  margin: 0 auto;
+  padding-top: 12px;
+}
+nav{
+  width: 1029px;
+  height: 52.5px;
+  margin-left: 49px;
+}
+nav > header{
+  width: 100%;
+  height: 100%;
+  padding: 0px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  z-index: 10000;
+}
+nav > header div.td_header_logo{
+  width: 186px;
+  height: 35px;
+  
+}
+nav > header div.td_header_logo img{
+  width:100%;
+  height: 100%;
+}
+nav > header ul{
+  display:flex;
+  height: 100%;
+  width:433px;
+  justify-content: center;
+  gap:30px;
+  align-items: center;
+}
+nav > header ul li {
+  white-space: nowrap;
+  height: 100%;
+  width: 85px;
+  list-style: none;
+  font-size: 18px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 10px;
+  line-height: 27px;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #FCFCFC;
+}
+nav > header ul li:last-child{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 10px;
+  width: 125px;
+  background: #ED1C24;
+  border-radius: 5px;
+}
+section.td_section1{
+  margin-top: 20px;
+  position: relative;
+  width:100%;
+  height: 717px;
+  background: rgba(238, 230, 230, 0.5);
+  backdrop-filter: blur(2px);
+  border-radius: 5px; 
+  padding: 141px 0 82px 108px;
+}
+.image3{
+  position: absolute;
+  top:-100px;
+  right:0;
+}
+.image4{
+  position: absolute;
+  right:0;
+  top:-100px;
+  z-index: -1;
+}
+.image5{
+  position: absolute;
+  top: 117px;
+  right: 30px;
+}
+section.td_section1 > div{
+  height: 435px;
+  width:450px;
+}
+section.td_section1 > div h1{
+  width: 326px;
+  height: 230px;
+  margin-bottom: 20px;
+  font-family: 'Poppins';
+  font-style: normal;
+  line-height: 90%;
+  font-weight: 700;
+  font-size: 70px;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #000000;
+}
+section.td_section1 > div p{
+  width: 356px;
+  height: 185px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: 0.02em;
+  color:#000000;
+  margin-bottom: 19px;
+}
+section.td_section1 > input{
+  width: 240px;
+  height: 40px;
+  background: #FAFBFC;
+  border: 2px solid #000000;
+  border-radius: 3px;
+  padding:10px 65px 10px 8px;
+}
+section.td_section1 > input::placeholder{
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #7A869A;
+}
+section.td_section1 > button{
+  padding: 9px auto;
+  width: 137px;
+  height: 38px;
+  background: #292D32;
+  border-radius: 3px;
+  margin-left: 18px;
+  color:white
 }
