first coomit hassan_features branch

--- a/style.css
+++ b/style.css
@@ -1,29 +1,128 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-*{
-  margin:0;
-  padding:0;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-body{
+body {
   width: 100vw;
   height: 100vh;
-  background: #1E1E1E;
+  background: #1e1e1e;
 }
-main{
+main {
   position: relative;
   width: 1127px;
-  height: 4662px;
-  background: #FFFFFF;
+  /* height: 4662px; */
+  background: #ffffff;
   margin: 0 auto;
-  padding-top: 12px;
 }
-nav{
+
+header {
+  height: 85px;
+  margin: 0 79px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header img {
+  margin-left: 14px;
+}
+
+ul {
+  display: flex;
+  gap: 30px;
+}
+
+li {
+  width: fit-content;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 27px;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #ffffff;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  z-index: 2;
+}
+
+.get-access {
+  padding: 12.79px 10px;
+  background: #ed1c24;
+  border-radius: 5px;
+}
+
+.td_section1 {
+  position: relative;
+  height: 717px;
+  background: rgba(238, 230, 230, 0.5);
+  padding: 0 65px;
+  display: flex;
+  justify-content: space-between;
+  z-index: 0;
+}
+
+.td_section1 div {
+  margin-bottom: 82px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: left;
+  justify-content: flex-end;
+  margin-left: 65px;
+}
+
+.td_section1 h1 {
+  width: 328px;
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #000000;
+}
+
+.image5 {
+  justify-self: end;
+  align-self: flex-end;
+  border-radius: 50px 50px 0px 0px;
+}
+
+.td_section1 p {
+  width: 356px;
+  height: 185px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: 0.02em;
+  color: #000000;
+}
+
+.blk button {
+  background: #000000;
+}
+
+.blk input {
+  border: 2px solid #000000;
+}
+
+.h1,
+.h2 {
+  position: absolute;
+  top: -85px;
+  right: 0px;
+  z-index: 0;
+}
+
+/* nav {
   width: 1029px;
   height: 52.5px;
   margin-left: 49px;
 }
-nav > header{
+nav > header {
   width: 100%;
   height: 100%;
   padding: 0px 30px;
@@ -34,21 +133,20 @@ nav > header{
   position: relative;
   z-index: 10000;
 }
-nav > header div.td_header_logo{
+nav > header div.td_header_logo {
   width: 186px;
   height: 35px;
-  
 }
-nav > header div.td_header_logo img{
-  width:100%;
+nav > header div.td_header_logo img {
+  width: 100%;
   height: 100%;
 }
-nav > header ul{
-  display:flex;
+nav > header ul {
+  display: flex;
   height: 100%;
-  width:433px;
+  width: 433px;
   justify-content: center;
-  gap:30px;
+  gap: 30px;
   align-items: center;
 }
 nav > header ul li {
@@ -65,53 +163,55 @@ nav > header ul li {
   line-height: 27px;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
-nav > header ul li:last-child{
+nav > header ul li:last-child {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 0px 10px;
   width: 125px;
-  background: #ED1C24;
+  background: #ed1c24;
   border-radius: 5px;
 }
-section.td_section1{
+section.td_section1 {
   margin-top: 20px;
   position: relative;
-  width:100%;
+  width: 100%;
   height: 717px;
   background: rgba(238, 230, 230, 0.5);
   backdrop-filter: blur(2px);
-  border-radius: 5px; 
+  border-radius: 5px;
   padding: 141px 0 82px 108px;
 }
-.image3{
+
+.image3 {
   position: absolute;
-  top:-100px;
-  right:0;
+  top: -100px;
+  right: 0;
 }
-.image4{
+.image4 {
   position: absolute;
-  right:0;
-  top:-100px;
+  right: 0;
+  top: -100px;
   z-index: -1;
 }
-.image5{
+.image5 {
   position: absolute;
   top: 117px;
   right: 30px;
+  border-radius: 50px;
 }
-section.td_section1 > div{
+section.td_section1 > div {
   height: 435px;
-  width:450px;
+  width: 450px;
 }
-section.td_section1 > div h1{
+section.td_section1 > div h1 {
   width: 326px;
   height: 230px;
   margin-bottom: 20px;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   line-height: 90%;
   font-weight: 700;
@@ -120,36 +220,355 @@ section.td_section1 > div h1{
   text-transform: capitalize;
   color: #000000;
 }
-section.td_section1 > div p{
+section.td_section1 > div p {
   width: 356px;
   height: 185px;
   font-weight: 500;
   font-size: 24px;
   line-height: 36px;
   letter-spacing: 0.02em;
-  color:#000000;
+  color: #000000;
   margin-bottom: 19px;
 }
-section.td_section1 > input{
+section.td_section1 > input {
   width: 240px;
   height: 40px;
-  background: #FAFBFC;
+  background: #fafbfc;
   border: 2px solid #000000;
   border-radius: 3px;
-  padding:10px 65px 10px 8px;
+  padding: 10px 65px 10px 8px;
 }
-section.td_section1 > input::placeholder{
+section.td_section1 > input::placeholder {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #7A869A;
+  color: #7a869a;
 }
-section.td_section1 > button{
+section.td_section1 > button {
   padding: 9px auto;
   width: 137px;
   height: 38px;
-  background: #292D32;
+  background: #292d32;
   border-radius: 3px;
   margin-left: 18px;
-  color:white
+  color: white;
+} */
+
+.bg {
+  position: absolute;
+  z-index: -1;
 }
+
+.r1 {
+  top: -118px;
+  right: 0;
+}
+
+.r2 {
+  top: 232px;
+  right: 0;
+}
+
+.f1 {
+  margin: 0;
+  top: 250px;
+  left: 0px;
+  z-index: 0;
+}
+
+.f2 {
+  margin: 0;
+  top: 166px;
+  left: 0px;
+  z-index: 0;
+}
+
+.l1 {
+  margin: 0;
+  top: 135px;
+  left: 0px;
+  z-index: 0;
+}
+
+.l2 {
+  margin: 0;
+  top: 271px;
+  left: 0px;
+  z-index: 0;
+}
+
+.features {
+  position: relative;
+  padding: 59px 108px;
+  height: 1163px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.features div {
+  display: flex;
+  align-items: center;
+}
+
+.features h3 {
+  height: 48px;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 100%;
+  width: 224px;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #000000;
+}
+
+.features p {
+  width: 350px;
+  height: 216px;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 120%;
+  text-align: right;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #000000;
+}
+
+.features div img {
+  margin-left: 38px;
+  z-index: 1;
+}
+
+.td_section2 {
+  background: rgba(238, 230, 230, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 798px;
+  background: rgba(238, 230, 230, 0.5);
+  backdrop-filter: blur(2px);
+  border-radius: 5px;
+}
+
+.td_section2 h1 {
+  width: 379px;
+  height: 236px;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #000000;
+  margin-left: 120px;
+}
+.rating-card {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.card {
+  padding: 37px;
+  width: 578px;
+  height: 200.5px;
+  background: #ffffff;
+  box-shadow: 0px 6.69919px 6.69919px rgba(0, 0, 0, 0.25);
+  border-radius: 8.37398px;
+  margin-right: 21px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card h3 {
+  text-align: center;
+}
+
+.stars {
+  display: flex;
+  gap: 0;
+  align-items: center;
+}
+
+.stars p {
+  display: inline-block;
+  width: 56px;
+  height: 38px;
+  margin-left: 20px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #000000;
+}
+
+.card h3 {
+  width: 310px;
+  height: 43px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #000000;
+}
+
+.iphone_location_img,
+.locate_fast {
+  z-index: 1;
+  display: inline-block;
+}
+
+.iphone_container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.iphone_location_img {
+  margin: 66px 59px 51.39px 65px;
+}
+
+.locate_fast {
+  height: 216px;
+  width: 444px;
+  font-weight: 700;
+  font-size: 60px;
+  text-align: right;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #000000;
+}
+
+.td_section3 {
+  background: #292d32;
+  height: 600px;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.td_section3 h3 {
+  font-family: "Poppins";
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 90px;
+  text-align: center;
+  letter-spacing: 0.02em;
+}
+
+.countdown-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.countdown {
+  margin: 64px 0;
+  border: 5px solid #ffffff;
+  border-radius: 5px;
+  height: 149px;
+  width: 106px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 54px;
+  letter-spacing: 0.02em;
+  padding: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.colom {
+  margin: 27px;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+  height: 38px;
+}
+
+form button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 15px 12px;
+  height: 38px;
+  background: #ed1c24;
+  border-radius: 3px;
+  color: #ffffff;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  align-items: center;
+  text-align: center;
+  border: none;
+}
+
+button:hover {
+  transform: scale(1.01);
+}
+
+form input {
+  padding: 0 8px;
+  width: 240px;
+  height: 40px;
+  background: #fafbfc;
+  border: 2px solid #ed1c24;
+  border-radius: 3px;
+}
+
+form input:focus {
+  outline: #ed1c24;
+  scale: 1.01;
+}
+
+form input::placeholder {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+footer {
+  background: #ed1c24;
+  padding: 25px 69px 5px 69px;
+  color: #ffffff;
+  font: 15px "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+.social-media {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+}
+
+.social-media a {
+  max-height: fit-content;
+}
+
+footer ul {
+  margin-top: 11px;
+  margin-bottom: 16px;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  height: 23px;
+}
+
+.terms {
+  display: flex;
+  justify-content: center;
+}
+
+/* font-family: 'Inter', sans-serif;
+font-family: 'Poppins', sans-serif; */
