--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ li {
   z-index: 2;
 }
 
+li:hover {
+  cursor: pointer;
+}
+
 .get-access {
   padding: 12.79px 10px;
   background: #ed1c24;
@@ -55,7 +59,7 @@ li {
   background: rgba(238, 230, 230, 0.5);
   padding: 0 65px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   z-index: 0;
 }
 
@@ -66,7 +70,7 @@ li {
   gap: 20px;
   text-align: left;
   justify-content: flex-end;
-  margin-left: 5.77%;
+  margin-right: 11.45%;
 }
 
 .td_section1 h1 {
@@ -80,7 +84,7 @@ li {
 }
 
 .image5 {
-  justify-self: end;
+  margin-left: 7.05%;
   align-self: flex-end;
   border-radius: 50px 50px 0px 0px;
 }
@@ -110,6 +114,15 @@ li {
   right: 0px;
   z-index: 0;
 }
+.h1 {
+  width: 48.5%;
+  height: 401px;
+}
+
+.h2 {
+  width: 54.4%;
+  height: 802px;
+}
 
 .bg {
   position: absolute;
@@ -119,11 +132,13 @@ li {
 .r1 {
   top: -118px;
   right: 0;
+  z-index: 1;
 }
 
 .r2 {
   top: 232px;
   right: 0;
+  z-index: 1;
 }
 
 .f1 {
@@ -131,6 +146,8 @@ li {
   top: 250px;
   left: 0px;
   z-index: 0;
+  width: 51%;
+  height: 847px;
 }
 
 .f2 {
@@ -138,25 +155,31 @@ li {
   top: 166px;
   left: 0px;
   z-index: 0;
+  width: 35.6%;
+  height: 861px;
 }
 
 .l1 {
+  width: 35.76%;
   margin: 0;
   top: 135px;
   left: 0px;
   z-index: 0;
+  height: 617px;
 }
 
 .l2 {
+  width: 47.65%;
   margin: 0;
   top: 271px;
   left: 0px;
   z-index: 0;
+  height: 617px;
 }
 
 .features {
   position: relative;
-  padding: 59px 11.4%;
+  margin: 59px 0;
   height: 1163px;
   display: flex;
   flex-direction: column;
@@ -164,11 +187,14 @@ li {
 }
 
 .features div {
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .features h3 {
+  margin: 0 11.4%;
   height: 48px;
   font-weight: 700;
   font-size: 48px;
@@ -180,7 +206,8 @@ li {
 }
 
 .features p {
-  width: 350px;
+  margin-left: 9.27%;
+  width: 260px;
   height: 216px;
   font-weight: 700;
   font-size: 60px;
@@ -189,11 +216,13 @@ li {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #000000;
+  z-index: 1;
 }
 
 .features div img {
   margin-left: 38px;
   z-index: 1;
+  margin-right: 0.93%;
 }
 
 .td_section2 {
@@ -217,11 +246,13 @@ li {
   text-transform: capitalize;
   color: #000000;
   margin-left: 120px;
+  z-index: 2;
 }
 .rating-card {
   display: flex;
   flex-direction: column;
   gap: 24px;
+  z-index: 2;
 }
 
 .card {
@@ -281,10 +312,11 @@ li {
 .iphone_container {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding-right: 12.9%;
   padding-left: 6%;
+  gap: 4.56%;
 }
 
 .iphone_location_img {
@@ -292,7 +324,7 @@ li {
 }
 
 .locate_fast {
-  height: 216px;
+  /* height: 260px; */
   width: 444px;
   font-weight: 700;
   font-size: 60px;
@@ -300,6 +332,7 @@ li {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #000000;
+  line-height: 120%;
 }
 
 .td_section3 {
@@ -437,15 +470,6 @@ footer ul {
 
 /* font-family: 'Inter', sans-serif;
 font-family: 'Poppins', sans-serif; */
-@media screen and (max-width: 1100px) {
-  body {
-    width: 100vw;
-  }
-  main {
-    position: relative;
-    width: 1127px;
-  }
-}
 
 .newsletter {
   width: 100%;
@@ -522,4 +546,21 @@ font-family: 'Poppins', sans-serif; */
 
 .newsletter-top-black .optionalParent input {
   background: #000000;
+}
+
+@media screen and (max-width: 1100px) {
+  body {
+    width: 100vw;
+  }
+  main {
+    position: relative;
+    width: 1127px;
+  }
+}
+
+@media (min-width: 1271px) {
+  .iphone_location_img {
+    position: relative;
+    right: 5%;
+  }
 }
