--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ li,
   align-items: center;
 }
 
-.features div img {
+.display {
   margin-top: 147px;
   margin-right: 6.04%;
   z-index: 1;
@@ -446,6 +446,7 @@ h1 {
   .display2 {
     display: none;
   }
+
   .display1 {
     display: block;
     margin-right: 0;
